@@ -318,14 +318,16 @@ public class CompetenceCourseMarkSheetBean implements IBean {
         // set available options
         final Set<Person> available;
         if (isByTeacher()) {
+            MarkSheetSettings marksheetSettings =
+                    getCompetenceCourse().getDepartmentUnit(getExecutionInterval()).getMarkSheetSettings();
 
-            if (MarkSheetSettings.getInstance().getAllowTeacherToChooseCertifier()) {
+            if (marksheetSettings.getAllowTeacherToChooseCertifier()) {
                 available = teachers;
             } else {
                 available = Sets.newHashSet(Authenticate.getUser().getPerson());
             }
 
-            if (MarkSheetSettings.getInstance().getLimitCertifierToResponsibleTeacher()) {
+            if (marksheetSettings.getLimitCertifierToResponsibleTeacher()) {
 
                 for (final Iterator<Person> iterator = available.iterator(); iterator.hasNext();) {
                     if (!this.responsibles.contains(iterator.next())) {
@@ -356,7 +358,10 @@ public class CompetenceCourseMarkSheetBean implements IBean {
     }
 
     public boolean getLimitTeacherCreation() {
-        return isByTeacher() && MarkSheetSettings.getInstance().getLimitCreationToResponsibleTeacher()
+        MarkSheetSettings marksheetSettings =
+                getCompetenceCourse().getDepartmentUnit(getExecutionInterval()).getMarkSheetSettings();
+
+        return isByTeacher() && marksheetSettings.getLimitCreationToResponsibleTeacher()
                 && !this.responsibles.contains(Authenticate.getUser().getPerson());
     }
 
