@@ -1,3 +1,5 @@
+- Refactor: Changes in MarkSheetSettings to allow multiple instances [#qubIT-Fenix-7191]
+
 7.24.9 (11-07-2025)
 - Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]
 
